# Dino-game

./: Bird.cpp  Button.cpp  CMakeLists.txt  Cactus.cpp  EmptyState.cpp  Game.cpp  GameState.cpp  Main.cpp  MainMenuState.cpp  Obsticle.cpp  OptionsState.cpp  Player.cpp  README.md  SoundManager.cpp  State.cpp  StateMachine.cpp  TextureManager.cpp
Headers/: Bird.hpp  Button.hpp  Cactus.hpp  Game.hpp  GameState.hpp  Global.hpp  MainMenuState.hpp  Obsticle.hpp  OptionsState.hpp  Player.hpp  SoundManager.hpp  State.hpp  TextureManager.hpp
